[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/helicopter_select.gd" type="Script" id=1]

[node name="helicopter_select" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="preview" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 0.6
rect_min_size = Vector2( 0, 200 )
stretch = true

[node name="vp" type="Viewport" parent="preview"]
size = Vector2( 1280, 432 )
transparent_bg = true
handle_input_locally = false
disable_3d = true
usage = 0
render_target_update_mode = 3

[node name="name" type="Label" parent="."]
anchor_top = 0.6
anchor_right = 1.0
anchor_bottom = 0.75
align = 1
valign = 1

[node name="buttons" type="HBoxContainer" parent="."]
anchor_top = 0.75
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -93.0
rect_min_size = Vector2( 0, 64 )
custom_constants/separation = 16
alignment = 1

[node name="prev_btn" type="Button" parent="buttons"]
margin_left = 459.0
margin_right = 569.0
margin_bottom = 87.0
rect_min_size = Vector2( 110, 40 )
size_flags_horizontal = 0
text = "Previous"

[node name="confirm_btn" type="Button" parent="buttons"]
margin_left = 585.0
margin_right = 695.0
margin_bottom = 87.0
rect_min_size = Vector2( 110, 40 )
size_flags_horizontal = 0
text = "Confirm"

[node name="next_btn" type="Button" parent="buttons"]
margin_left = 711.0
margin_right = 821.0
margin_bottom = 87.0
rect_min_size = Vector2( 110, 40 )
size_flags_horizontal = 0
text = "Next"
